# MIT_808_Streamlit

./: .gitignore  README.md
Streamlit/: .gitignore  app.py  cli.py  installer.cfg  packages.txt  pyproject.toml  requirements.txt  settings.py  start_app.bat  start_app_mac.sh
Streamlit/lib/: config_instructions.toml
Streamlit/lib/models/weights/230610_154756.single_instance/: initial_config.json  labels_gt.train.slp  labels_gt.val.slp  labels_pr.train.slp  labels_pr.val.slp  metrics.train.npz  metrics.val.npz  training_config.json  training_log.csv
Streamlit/src/: Dockerfile  Dockerfile_mac  Untitled-1.ipynb  helper.py  main.py  packages.txt  process_tif.py  requirements.txt  run_app.py  settings.py  test.ipynb
Streamlit/src/runs/segment/predict/image.jpeg/predict/: labels.txt
Streamlit/wheels/: blinker-1.4-py3-none-any.whl
