[tool.poetry]
name = "crocodile-detect"
version = "0.1.0"
description = "Crocodile Detector from Images"
authors = ["Lesego Matojane"]
license = "MIT 2.0"
readme = "README.md"
packages = [{include = "crocodile_detect"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.22.0"
numpy = "1.24.2"
pandas = "2.0.1"
pillow = "9.5.0"
torch = "1.11.0"
ultralytics = "8.0.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
